force-app/main/default/objects/Attendance__c/fields/Auto_Ended__c.field-meta.xml
<CustomField>
    <fullName>Auto_Ended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Ended</label>
    <type>Checkbox</type>
</CustomField>