force-app/main/default/objects/Attendance__c/fields/Day_Summary__c.field-meta.xml
<CustomField>
    <fullName>Day_Summary__c</fullName>
    <label>Day Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>