force-app/main/default/objects/Attendance__c/fields/Gross_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Gross_Work_Hours__c</fullName>
    <formula>IF(ISBLANK(Gross_Work_Minutes__c), 0, Gross_Work_Minutes__c / 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Work Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>