force-app/main/default/objects/Attendance__c/fields/Gross_Work_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Gross_Work_Minutes__c</fullName>
    <label>Gross Work Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>