force-app/main/default/objects/Attendance__c/fields/Is_Non_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_Business_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Non Business Hours</label>
    <type>Checkbox</type>
</CustomField>