force-app/main/default/objects/Attendance__c/fields/Is_Week_Off__c.field-meta.xml
<CustomField>
    <fullName>Is_Week_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Week Off</label>
    <type>Checkbox</type>
</CustomField>