force-app/main/default/objects/Attendance__c/fields/Net_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Net_Work_Hours__c</fullName>
    <formula>IF(ISBLANK(Net_Work_Minutes__c), 0, Net_Work_Minutes__c / 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Work Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>