force-app/main/default/objects/Attendance__c/fields/Net_Work_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Net_Work_Minutes__c</fullName>
    <label>Net Work Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>