force-app/main/default/objects/Attendance__c/fields/Total_Break_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Break_Minutes__c</fullName>
    <label>Total Break Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>