force-app/main/default/objects/Attendance__c/fields/Unavailable_Marked_By__c.field-meta.xml
<CustomField>
    <fullName>Unavailable_Marked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unavailable Marked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WorkdayUnavailableAttendances</relationshipName>
    <type>Lookup</type>
</CustomField>