force-app/main/default/objects/Attendance__c/fields/Unavailable_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unavailable_Reason__c</fullName>
    <label>Unavailable Reason</label>
    <type>TextArea</type>
</CustomField>