force-app/main/default/objects/Attendance__c/fields/Workday_Status_Color__c.field-meta.xml
<CustomField>
    <fullName>Workday_Status_Color__c</fullName>
    <formula>CASE(TEXT(Day_Status__c), &apos;Active&apos;, &apos;Green&apos;, &apos;On Break&apos;, &apos;Yellow&apos;, &apos;Planned&apos;, &apos;Grey&apos;, &apos;Red&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workday Status Color</label>
    <type>Text</type>
</CustomField>