force-app/main/default/objects/Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attendance_Date__c</columns>
    <columns>Auto_Ended__c</columns>
    <columns>Day_Status__c</columns>
    <columns>Employee__c</columns>
    <columns>End_Time__c</columns>
    <columns>Day_Summary__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Unique_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>